8231757: [ppc] Fix VerifyOops. Errors show since 8231058

Also make the checks print the wrong value and where a failure occurred.

Reviewed-by: dholmes, mdoerr